# PHOS256

./: CMakeLists.txt  README.md  compile_commands.json
cmake/: CMakeLists.cmake  CMakeListsDefaults.cmake  CMakeROOT.cmake  FindCLHEP.cmake  FindGEANT4.cmake  FindGEANT4VMC.cmake  Geant4VMCConfig.cmake  ROOTMacros.cmake
dataformats/: BadChannelsMap.cxx  BadChannelsMap.h  CMakeLists.txt  CalibParams.cxx  CalibParams.h  Cell.h  Cluster.cxx  Cluster.h  DataFormatsLinkDef.h  Digit.cxx  Digit.h  Hit.h
macros/: Config.C  Config_Muon.C  Run.C  RunRaw.C  SetCuts.C  g4config.in  g4libs.C  load_g4.C
raw/: CMakeLists.txt  Fitter.cxx  Fitter.h  FitterH.cxx  FitterH.h  Mapping.cxx  Mapping.h  RawDataHeader.h  RawLinkDef.h  RawReader.cxx  RawReader.h  Reconstruction.cxx  Reconstruction.h
raw/Mapping/: Mapping.data  WriteMapping.C
simulation/: CMakeLists.txt  Clusterizer.cxx  Clusterizer.h  Digitizer.cxx  Digitizer.h  GenBox.cxx  GenBox.h  GenMuon.cxx  GenMuon.h  GenPolPhoton.cxx  GenPolPhoton.h  GenPythia.cxx  GenPythia.h  Geometry.cxx  Geometry.h  Hall.cxx  Hall.h  MagField.cxx  MagField.h  Magnet.cxx  Magnet.h  Phos.cxx  Phos.h  RunConfiguration.cxx  RunConfiguration.h  SimParams.cxx  SimParams.h  Simulation.cxx  Simulation.h  SimulationLinkDef.h  Stack.cxx  Stack.h
simulation/macros/: Config.C
utils/: CMakeLists.txt  Geometry.cxx  Geometry.h  SimParams.h  UtilsLinkDef.h
